data/derived/comb/progs/unify/prog2480.ml.out
Characters 8-10:
  List.hd 55;;
          ^^
Error: This expression has type int but an expression was expected of type
         'a list
